2012-01-02  Dirk Bergstrom  <krid@otisbean.com>

Fix bug where album thumbnails didn't load after some kinds of scrolling
events.

	* src/com/squeezecontrol/AlbumBrowserActivity.java: Rewrite and
	simplify interaction between scrolling and image loading.  Don't
	load images during fling-scrolling, wait until the scroll stops.
	Otherwise load images if there's Album data to load from.
 
	* src/com/squeezecontrol/image/ImageLoaderService.java (loadImage):
	Load image for an Album.

2011-12-30  Dirk Bergstrom  <krid@otisbean.com>

Add a header to the song list showing the album icon/title, allowing
user to play/add to playlist/download the album as a whole.  Because
the various BrowserActivity subclasses are typed, and the header item
is of a different type, this required a lot of special case code.  I
suspect a refactoring is in order, but it would be a doozy...

	* src/com/squeezecontrol/SongBrowserActivity.java: Rewrite almost
	half the class to handle the header.

	* src/com/squeezecontrol/PlayerActivity.java (onLongClick): Pass
	complete Album object when starting SongBrowserActivity.

	* src/com/squeezecontrol/model/Browsable.java: Now extends Serializable.

	* src/com/squeezecontrol/model/Song.java: Implement HasArtist, add
	serialVersionUID.

	* src/com/squeezecontrol/model/Album.java: Implement HasArtist, add
	serialVersionUID.
	(forSong): Create an Album from a Song.

	* src/com/squeezecontrol/model/Artist.java: Implement HasArtist, add
	serialVersionUID.

	* src/com/squeezecontrol/model/HasArtist.java: Interface for Browsables
	that have an artist.

	* src/com/squeezecontrol/io/SqueezePlayer.java (addToPlaylist): Add
	convenience method.

	* src/com/squeezecontrol/AbstractMusicBrowserActivity.java (download):
	Implement as a general method instead of overriding in subclasses.
	(addContextMenuItems): Add Browsable item to arguments to avoid extra
	call to getSelectedItem().
	(onCreateContextMenu): Call getItemSelected().